# 3DModelingReconstruct

./: .gitignore  CMakeLists.txt  PreBuild.bat  fuck.txt  packages.cmake  target_link_libraries.cmake
include/GL/: freeglut.h  freeglut_ext.h  freeglut_std.h  glut.h
resources/: LoadMesh.cbp  LoadMesh.depend  LoadMesh.layout  ModelLoading.cbp
resources/buddha/: cmvs-pc.ply  poisson-mesh-20-30-0.375.off  poisson-mesh.ply
resources/model/: 01_bunny.ply  08_bunny_with_holes.ply
src/3dmodeling/: DrawGear.cpp  LoadPLYPointModel.cpp
src/lib/: IncludeTest.cpp  IncludeTest.h  IncludeTest.hpp
src/main/3dmodeling/: CGALNormals.cpp  CGALPoisson.cpp  CGALRemoveOutliers.cpp  CGALTest.cpp  DrawGear.cpp  GLMatrixTest.cpp  LoadPLYPointModel.cpp  WineGlassBin.cpp
src/main/3dmodeling/homework/: CGALNormals.cpp  CGALPoisson.cpp  CGALRemoveOutliers.cpp  GLDisplay.cpp
src/main/3dmodeling/homework/deprecated/: CGALTest.cpp
src/main/combinatorics/: CatalanNumbers.cpp  Combine.cpp  CombineCalc.cpp  CombineGen.cpp  Fibonacci.cpp  GeneratingFunction.cpp  ImmediateInterchangeMethodPermutation.cpp  LexicographicalOrderPermutation.cpp  OrdinalMethodPermutation.cpp  SimplexAlgorithm.cpp
src/main/test/: cntest.c  cntest.cpp  main.cpp
src/test/: cntest.c  gltest.cpp
